AC_PREREQ(2.59)
AC_INIT([RLLOOK], [0.01])
AM_INIT_AUTOMAKE([RLLOOK], 0.01)
# AC_CONFIG_HEADER([include/config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

AM_PROG_LIBTOOL

# Checks for libraries.
AC_CHECK_LIB([dl], [main])
AC_CHECK_LIB([pthread], [main],, AC_MSG_ERROR([cannot find pthread library]))
AC_CHECK_LIB([xerces-c], [main],, AC_MSG_ERROR([cannot find xerces library]), -lpthread)
#AC_HAVE_LIBRARY(boost_signals-gcc,[main] , [AC_MSG_ERROR([cannot find boost libraries])])

PKG_CHECK_MODULES(freetype2, freetype2 >= 0.15.0)
AC_SUBST(freetype2_CFLAGS)
AC_SUBST(freetype2_LIBS)
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_STRUCT_TM
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_HEADER_STDC
AC_CHECK_FUNCS([memmove memset])

# check for renderers
CEGUI_ENABLE_OGRE_RENDERER
PKG_CHECK_MODULES(CEGUI, CEGUI >= 0.01, [
        AC_SUBST(CEGUI_CFLAGS)
        AC_SUBST(CEGUI_LIBS)
        AC_MSG_RESULT([CEGUI enabled])],
        AC_MSG_ERROR([CEGUI not found]))
 

dnl Create the makefiles
AC_CONFIG_FILES([Makefile RastullahLook/Makefile])

AC_OUTPUT
