include_HEADERS = \
	FastDelegate.h \
	line3D.h \
	OgreNewt_BasicJoints.h \
	OgreNewt_Body.h \
	OgreNewt_BodyIterator.h \
	OgreNewt_Collision.h \
	OgreNewt_CollisionPrimitives.h \
	OgreNewt_ContactCallback.h \
	OgreNewt_Debugger.h \
	OgreNewt.h \
	OgreNewt_Joint.h \
	OgreNewt_MaterialID.h \
	OgreNewt_MaterialPair.h \
	OgreNewt_Prerequisites.h \
	OgreNewt_RayCast.h \
	OgreNewt_Tools.h \
	OgreNewt_TreeCollisionSerializer.h \
	OgreNewt_Vehicle.h \
	OgreNewt_World.h
