INCLUDES = $(OGRE_CFLAGS) -I../inc

lib_LTLIBRARIES = libOgreNewt.la
libOgreNewt_la_LDFLAGS = $(OGRE_LIBS)
libOgreNewt_la_SOURCES = \
	OgreNewt_BasicJoints.cpp \
	OgreNewt_Body.cpp \
	OgreNewt_Collision.cpp \
	OgreNewt_CollisionPrimitives.cpp \
	OgreNewt_ContactCallback.cpp \
	OgreNewt_Debugger.cpp \
	OgreNewt_Joint.cpp \
	OgreNewt_MaterialID.cpp \
	OgreNewt_MaterialPair.cpp \
	OgreNewt_RayCast.cpp \
	OgreNewt_Tools.cpp \
	OgreNewt_TreeCollisionSerializer.cpp \
	OgreNewt_Vehicle.cpp \
	OgreNewt_World.cpp
