nobase_include_HEADERS = \
	Dsa4Wz/detconfig.h \
	Dsa4Wz/LaderXerces.h \
	Dsa4Wz/Log.h \
	Dsa4Wz/PersistenzManagerXerces.h \
	Dsa4Wz/Update.h \
	Dsa4Wz/AbgeleiteterWert.h \
	Dsa4Wz/Charakteristikum.h \
	Dsa4Wz/Definition.h \
	Dsa4Wz/Eigenschaft.h \
	Dsa4Wz/Hole.h \
	Dsa4Wz/Kampftechnik.h \
	Dsa4Wz/Kultur.h \
	Dsa4Wz/Modifikator.h \
	Dsa4Wz/NDSABasis.h \
	Dsa4Wz/NDSAUtil.h \
	Dsa4Wz/PersistenzManager.h \
	Dsa4Wz/Person.h \
	Dsa4Wz/PersonenKomponente.h \
	Dsa4Wz/PersonHandler.h \
	Dsa4Wz/PersonHandlerGenerator.h \
	Dsa4Wz/Profession.h \
	Dsa4Wz/Rasse.h \
	Dsa4Wz/Regeln.h \
	Dsa4Wz/Sonderfertigkeit.h \
	Dsa4Wz/SpracheSchrift.h \
	Dsa4Wz/Talent.h \
	Dsa4Wz/Texte.h \
	Dsa4Wz/Voraussetzung.h \
	Dsa4Wz/Wuerfel.h \
	Dsa4Wz/Zauber.h 
	