INCLUDES =  -I. -I../include

lib_LTLIBRARIES = libOpenSteer.la
libOpenSteer_la_LDFLAGS =  $(LIBS)
libOpenSteer_la_SOURCES = \
	lq.c \
	Clock.cpp \
	Color.cpp \
	Obstacle.cpp \
	OldPathway.cpp \
	Path.cpp \
	Pathway.cpp \
	PlugIn.cpp \
	PolylineSegmentedPath.cpp \
	PolylineSegmentedPathwaySegmentRadii.cpp \
	PolylineSegmentedPathwaySingleRadius.cpp \
	SegmentedPath.cpp \
	SegmentedPathway.cpp \
	Vec3.cpp \
	Vec3Utilities.cpp 

	